@@ -1,7 +1,7 @@
 #!/bin/bash
 
 	if [ "$EUID" == "0" ]
-	then echo "Please do not run as root"
+	then echo "Please do not run as root."
   	exit
 	fi
 
