@@ -2,6 +2,10 @@
 
 # yt-playlist macOS
 
+if [ "$EUID" == "0" ]
+then echo "Please do not run as root."
+exit
+fi
 PATH="/usr/local/opt/gnu-sed/libexec/gnubin:$PATH"
 PATH="/usr/local/opt/coreutils/libexec/gnubin:$PATH"
 PATH="/usr/local/opt/gawk/libexec/gnubin:$PATH"
@@ -16,7 +20,7 @@ show_audio_dir=$(printf '"%s" \n' "Saved to: ${HOME}/Music/")
 show_video_dir=$(printf '"%s" \n' "Saved to: ${HOME}/Videos/")
 tmp_dir="/tmp"
 yt_video_number="1:100"
-version="v2.42.2"
+version="v2.42.3"
 
 
 #mainmenu
